fix: SCSS of new-message-header and direct-message-header - overflow hidden for oversizing box-shadow

--- a/src/app/components/direct-message/direct-message.component.scss
+++ b/src/app/components/direct-message/direct-message.component.scss
@@ -9,7 +9,7 @@
   height: 100%;
   background-color: white;
   border-radius: 30px;
-
+  overflow: hidden;
   .direct-m-header {
     width: 100%;
     display: flex;
